--- a/Frontend/src/Styles/Pages/DymanicsPopUps.css
+++ b/Frontend/src/Styles/Pages/DymanicsPopUps.css
@@ -1,7 +1,11 @@
+.dynamicFromModal {
+    margin-bottom: 30px;
+}
+
 .input-container {
     position: relative;
-    margin: 50px auto;
-    width: 200px;
+    margin: 30px auto;
+    width: 300px;
   }
   
   .input-container .inputText,
@@ -56,5 +60,45 @@
     font-size: 16px;
 
   }
+.swal2-actions {
+  width: 100%;
+}
 
+  .customConfirmBtnClass,
+  .customCancelBtnClass {
+    position: absolute;
+    background-color: transparent;
+    border: transparent;
+    border-radius: 20px;
+    padding: 5px 15px;
+    font-size: 16px;
+    margin: 5ps 10px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
 
+  .customConfirmBtnClass {
+    left: 25%;
+    bottom: 20px;
+    color: #13214E;
+    /* color verde con opacidad */
+    background-color: rgba(0, 128, 0, 0.5);
+  }
+
+  .customCancelBtnClass {
+    right: 25%;
+    bottom: 20px;
+    color: #13214E;
+    /* color rojo con opacidad */
+    background-color: rgba(255, 0, 0, 0.5);
+  }
+
+  .customConfirmBtnClass:hover {
+    background-color: rgba(0, 128, 0, 1);
+    color: white;
+  }
+
+  .customCancelBtnClass:hover {
+    background-color: rgba(255, 0, 0, 1);
+    color: white;
+  }
